Проект 7 спринта готов к 3 проверке.